--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "//": "change loglevel.default to warning for less verbose logging during dev",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
