Get DB connection string from appsettings

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=dbwriter_dotnet;Username=dbwriter;Password=blehbleh"
+  },  
   "//": "change loglevel.default to warning for less verbose logging during dev",
   "Logging": {
     "LogLevel": {
